divya - work appended to favaourite

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,6 +100,19 @@
 
     <!-- Divya -->
 
+    <!-- wishlist.xml-->
+    <string name="TextView1">Item_name</string>
+    <string name="TextView2">Item_description</string>
+    <string name="TextView3">Item_price</string>
+
+    <!-- Edit.xml-->
+    <string name="title"> Presonal Notes </string>
+    <string name="checkbox"> Contacted Salesman </string>
+    <string name="Personal_Note"> Your personal Note...... </string>
+    <string name="Appoinmet"> If You Place an Appoinment with claient Enter Details </string>
+    <string name="date"> Date </string>
+    <string name="time"> Time </string>
+    <string name="btn"> Edit </string>
 
     <!-- Ravindu -->
 
@@ -138,8 +151,6 @@
     <string name="AppGivingTroubleString">App giving trouble?</string>
     <string name="getInTouchString">Get In Touch</string>
     <string name="bugs">Bugs</string>
-
-
 
 
     <!-- Ashan -->
