--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,8 @@
     <!-- common -->
     <string name="image">image view</string>
     <string name="company_phone">01122223344 </string>
+    <string name="phone_number_unknown">xxxxxxxxxx</string>
+    <string name="loading">loading...</string>
 
     <!-- Manuka -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
@@ -50,7 +52,6 @@
     <string name="order_phone_cancel">Cancel</string>
     <string name="order_phone_new_pin">Get new PIN code</string>
     <string name="order_phone_didnt_recieve">Didn\'t receive the PIN code?</string>
-    <string name="order_phone_number">0772352146</string>
 
     <!-- Order -->
     <string name="orderStepHeader">Complete your purchase in 3 simple steps</string>
