--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,7 +65,7 @@
     <string name="contact_detailsTermsAndConditions">By posting this ad you agree to our terms and conditions</string>
     <string name="contact_detailsAdd">Add another phone number</string>
     <string name="contact_detailsHide">Hide my phone number(s)</string>
-    <string name="contact_details_error"></string>
+    <string name="contact_details_error">You need to have at least one verified number</string>
 
     <!-- advertisement -->
     <string name="newImage">Add new Image</string>
