--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -186,6 +186,10 @@
     <!--- Admin -->
     <string name="reviewAdsTitle">When a user post a new Ad or update an existing Ad, they wil be appeared here to be reviewed.</string>
 
+
+    <string name="close">close</string>
+    <string name="open">open</string>
+
     <!-- Divya -->
 
     <!-- wishlist.xml-->
