manuka - admin orders design recent fixedd

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -243,6 +243,8 @@
     <string name="AppGivingTroubleString">App giving trouble?</string>
     <string name="getInTouchString">Get In Touch</string>
     <string name="bugs">Bugs</string>
+    <string name="placed_date">Placed date</string>
+    <string name="payment_mode">Payment mode</string>
 
     <!-- Ashan -->
 </resources>
